--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation "androidx.room:room-runtime:2.4.1"
+    implementation 'androidx.room:room-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.4.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "io.coil-kt:coil:2.3.0"
