--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        buildConfigField "String", "DB_URL", "\"${properties.getProperty("url")}\""
+        buildConfigField "String", "DB_USERNAME", "\"${properties.getProperty("username")}\""
+        buildConfigField "String", "DB_PASSWORD", "\"${properties.getProperty("password")}\""
+
         kapt {
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas")
