--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.0.0"
+
     implementation 'androidx.room:room-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.4.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -65,4 +67,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
