--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -19,18 +16,15 @@
         android:theme="@style/Theme.ListenNow"
         tools:targetApi="31">
 
-        <activity android:name="br.com.listennow.view.HomeActivity" android:exported="true">
+        <activity
+            android:name=".system.main.MainActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="br.com.listennow.view.LoginActivity" />
-        <activity android:name="br.com.listennow.view.RegisterActivity" />
-        <activity android:name="br.com.listennow.view.SearchActivity" />
-        <activity android:name="br.com.listennow.view.SongDetailsActivity" />
-        <activity android:name="br.com.listennow.view.ProfileActivity" />
     </application>
 </manifest>
