--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ android {
 dependencies {
     def nav_version = "2.0.0"
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.room:room-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.4.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
