--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".system.main.MainActivity"
+            android:name=".ui.fragments.MainActivity"
             android:exported="true">
 
             <intent-filter>
