--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.fragments.MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
 
             <intent-filter>
