--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.0.0"
+    def nav_version = "2.2.0"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
@@ -63,7 +63,7 @@ dependencies {
     implementation 'org.json:json:20210307'
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.2.2"
     implementation 'org.postgresql:postgresql:42.2.9'
-    implementation 'androidx.fragment:fragment:1.6.2'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
