--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,24 @@
         android:theme="@style/Theme.SplashScreen"
         tools:targetApi="31">
 
+        <receiver
+            android:name="br.com.listennow.receiver.HeadsetStateReceiver"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".receiver.HeadsetStateReceiver"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
