--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,18 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
     namespace 'br.com.listennow'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "br.com.listennow"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -27,6 +29,8 @@ android {
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas")
             }
+
+            correctErrorTypes true
         }
     }
 
@@ -37,11 +41,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
@@ -51,27 +55,28 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.2.0"
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    def nav_version = '2.8.3'
+    implementation 'com.google.dagger:hilt-android:2.52'
+    kapt 'com.google.dagger:hilt-compiler:2.52'
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.11.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.room:room-ktx:2.4.1'
-    kapt "androidx.room:room-compiler:2.4.1"
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "io.coil-kt:coil:2.3.0"
-    implementation 'org.json:json:20210307'
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.2.2"
-    implementation 'org.postgresql:postgresql:42.2.9'
-    implementation 'androidx.fragment:fragment-ktx:1.2.4'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    kapt 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.datastore:datastore-preferences:1.1.1'
+    implementation 'io.coil-kt:coil:2.7.0'
+    implementation 'org.json:json:20240303'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.2'
+    implementation 'org.postgresql:postgresql:42.7.4'
+    implementation 'androidx.fragment:fragment-ktx:1.8.4'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
