--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SplashScreen"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".hilt.ListenNowApplication">
 
         <receiver
             android:name="br.com.listennow.receiver.HeadsetStateReceiver"
