--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.52'
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.11.0'
+    implementation("com.squareup.moshi:moshi-kotlin:1.15.1")
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.room:room-ktx:2.6.1'
