--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
 
 dependencies {
     def nav_version = '2.8.3'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.google.dagger:hilt-android:2.52'
     kapt 'com.google.dagger:hilt-compiler:2.52'
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
