--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 
 dependencies {
     def nav_version = '2.8.3'
+    implementation 'androidx.media:media:1.7.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.google.dagger:hilt-android:2.52'
