--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,14 @@ buildscript {
         google()
     }
     dependencies {
-        def nav_version = "2.9.7"
+        def nav_version = "2.8.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
 plugins {
-    id 'com.android.application' version '9.0.0' apply false
-    id 'com.android.library' version '9.0.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.59' apply false
-    id 'com.google.devtools.ksp' version '2.3.4' apply false
-
+    id 'com.android.application' version '8.1.3' apply false
+    id 'com.android.library' version '8.1.3' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.51.1' apply false
 }
