--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,30 +50,30 @@ android {
 
 dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.2.0"
-    implementation 'androidx.media:media:1.7.0'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.media:media:1.7.1'
+    implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    // Update after migrating to Jetpack Compose and then Gradle/AGP/KSP
     implementation 'com.google.dagger:hilt-android:2.58'
     kapt 'com.google.dagger:hilt-compiler:2.58'
-    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.11.0'
-    implementation("com.squareup.moshi:moshi-kotlin:1.15.1")
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.room:room-ktx:2.8.4'
     kapt 'androidx.room:room-compiler:2.8.4'
-    implementation 'androidx.datastore:datastore-preferences:1.1.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:3.0.0'
+    implementation("com.squareup.moshi:moshi-kotlin:1.15.2")
+    implementation "com.squareup.okhttp3:logging-interceptor:5.3.2"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0"
+
     implementation 'io.coil-kt:coil:2.7.0'
-    implementation 'org.json:json:20240303'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.2'
-    implementation 'androidx.fragment:fragment-ktx:1.8.4'
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.8.9'
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+
     implementation "androidx.navigation:navigation-fragment-ktx:2.9.7"
     implementation "androidx.navigation:navigation-ui-ktx:2.9.7"
 }
