--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,7 @@ plugins {
     id 'com.android.library' version '8.13.2' apply false
     id 'org.jetbrains.kotlin.android' version '2.2.0' apply false
     id 'com.google.dagger.hilt.android' version '2.58' apply false
+    id 'com.google.gms.google-services' version '4.4.4' apply false
+    id 'com.google.firebase.crashlytics' version "3.0.6" apply false
+
 }
