--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"
+        tools:ignore="ForegroundServicesPolicy" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"
+        tools:ignore="RequestInstallPackagesPolicy" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <attribution android:tag="@string/empty" android:label="@string/app_plays_audio" />
@@ -35,8 +36,8 @@
         tools:targetApi="31"
         android:name=".hilt.ListenNowApplication">
 
-        <service android:name="br.com.listennow.foreground.ImportAllSongsService" android:foregroundServiceType="dataSync" />
-        <service android:name=".foreground.SongPlayerService" android:foregroundServiceType="mediaPlayback" />
+        <service android:name="br.com.listennow.foreground.ImportAllSongsService" android:foregroundServiceType="dataSync" android:exported="false" />
+        <service android:name=".foreground.SongPlayerService" android:foregroundServiceType="mediaPlayback" android:exported="false" />
 
         <receiver
             android:name="br.com.listennow.receiver.HeadsetStateReceiver"
