fix: Enabling minify and shrinking resources - Release
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/62

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,14 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
         debug {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
